[package]
name = "rust-quiz"
version = "0.1.0"
authors = ["gmachado"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
html-escape = "0.2.6"
rand = "0.8.3"
text_io = "0.1.8"
ferris-says = "0.2"